# rust-boolinator

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  update-docs.py
doc/boolinator/: index.html  trait.Boolinator.html
doc/src/boolinator/src/: lib.rs.html
src/: lib.rs
